--- a/app/templates/admin/settings/emails.html
+++ b/app/templates/admin/settings/emails.html
@@ -64,7 +64,7 @@
                         <strong>No conectado.</strong> Debes iniciar sesión con una cuenta de Microsoft para enviar correos.
                     </div>
                     
-                    <a href="{{ url_for('pages_emails.ms_login') }}" class="btn btn-primary">
+                    <a href="{{ url_for('pages_admin.pages_emails.ms_login') }}" class="btn btn-primary">
                         <i class="bi bi-microsoft me-2"></i>
                         Conectar con Microsoft
                     </a>
