--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -210,7 +210,7 @@
               href="{{ url_for('pages_admin.pages_settings.users') }}">
               <i class="fas fa-user-cog me-2"></i>Usuarios
             </a>
-            <a class="nav-link submenu-item" href="{{ url_for('pages_emails.email_config') }}">
+            <a class="nav-link submenu-item" href="{{ url_for('pages_admin.pages_emails.email_config') }}">
               <i class="fas fa-envelope me-2"></i>Correos
             </a>
           </div>
@@ -309,7 +309,7 @@
                 href="{{ url_for('pages_admin.pages_settings.users') }}" data-bs-dismiss="offcanvas">
                 <i class="fas fa-user-cog me-2"></i>Usuarios
               </a>
-              <a class="nav-link submenu-item" href="{{ url_for('pages_emails.email_config') }}"
+              <a class="nav-link submenu-item" href="{{ url_for('pages_admin.pages_emails.email_config') }}"
                 data-bs-dismiss="offcanvas">
                 <i class="fas fa-envelope me-2"></i>Correos
               </a>
